[FIX] bug when closing and opening the right sidebar would not remove it from the width computation, leaving a scrollbar as you closed it (when there was none when open)

--- a/addons/openerp/static/css/screen.css
+++ b/addons/openerp/static/css/screen.css
@@ -2198,12 +2198,7 @@ button {
 }
 
 .sidebar-closed {
-    width: 0px;
-}
-
-.sidebar-closed #sidebar {
     display: none;
-
 }
 
 #sidebar_hide {
